<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/next_main"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/splash_image"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:background="@drawable/rounded_select_photo_button"
                android:text="@string/log_in"
                android:textSize="20sp"
                android:textColor="@color/main_color" />

            <TextView
                android:id="@+id/not_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:selectAllOnFocus="true"
                android:text="@string/don_t_have_an_account_register" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>