<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="4"
    android:background="#ffff"
    android:orientation="vertical"
    tools:context=".play_page">

    <FrameLayout
        android:id="@+id/play_page_framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.75"
        android:background="@color/main_color"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timer_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:text="@string/time_left"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:background="@drawable/button_cir"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:gravity="center_horizontal"
            android:text="@string/hit_it_on"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/before_start_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="600dp"
            android:gravity="center_horizontal"
            android:text="@string/good_luck"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/your_score_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="540dp"
            android:gravity="center"
            android:text="@string/your_score"
            android:visibility="visible"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/after_start_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="600dp"
            android:gravity="center_horizontal"
            android:text="@string/you_can_do_it"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/Score_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/score_display_imageview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:src="@drawable/score_png" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/your_score_ahead"
            android:textColor="#00A6B8"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>