<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="4"
    android:background="#00A6B8"

    android:orientation="vertical"
    tools:context=".splash_screen">

    <ImageView
        android:id="@+id/next_main"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:src="@drawable/splash_image"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/test_yourself"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="#fff"
        android:textSize="15sp" />


</LinearLayout>