<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    tools:context=".register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/selectphoto_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_horizontal"
                android:text="@string/select_photo"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:gravity="center_horizontal"
                android:layout_marginTop="230dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/selectphoto_imageview_register"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/icon_display"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="5dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email_address" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />


            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:textSize="20sp"
                android:background="@drawable/rounded_select_photo_button"
                android:text="@string/register"
                android:textColor="@color/main_color" />

            <TextView
                android:id="@+id/already_have_account_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account" />

            <ProgressBar
                android:id="@+id/progress_Bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:indeterminate = "true"
                android:visibility="gone"
                android:max="100"
                android:minWidth="200dp"
                android:minHeight="50dp"
                android:progress="0" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>