<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context=".score_page">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/next_main"
                android:layout_width="160dp"
                android:layout_marginTop="15dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/splash_image" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:text="@string/your_scores"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/score_page_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/score_display"
                    android:textColor="@color/white"
                    android:textSize="70sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ranking" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/ranking"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/to_ranking_page"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_baseline_navigate_next_24" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/white" />


    </LinearLayout>



</ScrollView>